# logf

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  OLD_TESTS.py  README.md  index.html  pyproject.toml  report.html  requirements_dev.txt  run-tests-multi.sh  setup.py  showtraceback.py  t.py  tests.py
.github/workflows/: python-ci.yml
.test/: OLD_TESTS.py  t.py
benchmarks/: benchf.py  logf_use_print.compared  logf_use_print.false  logf_use_print.true  with_and_without_logf.py
logfunc/: __init__.py  config.py  defaults.py  identifier.py  logf.py  main.py  msgs.py  utils.py
