[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logfunc"
version = '2.9.1'
description = "An EASY TO USE function decorator for advanced logging of function execution, including arguments, return values, and execution time."
authors = [{name = "Cary Carter", email = "ccarterdev@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
[project.urls]
Documentation = "https://github.com/cc-d/logf/"
Homepage = "https://github.com/cc-d/logf/"
Repository = "https://github.com/cc-d/logf/"
Changelog = "https://github.com/cc-d/logf/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["logfunc"]
